2007-07-23  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c: (texture_render_to_gl_quad),
	(clutter_texture_paint):
	Dont be over aggressive in throwing criticals for unrealized
	textures. Doesn't make sense for sub classes. (#403)

2007-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	Two small fixes for correctly debugging the deinitialisation
	phase of the backend:

	* clutter/glx/clutter-backend-glx.c: Remove the event source
	after we unref the main stage.

	* clutter/glx/clutter-stage-glx.c: Add a mark at the end of the
	unrealize call (the perl bindings seem to crash before we reach
	this point).

2007-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c: Remove pointer indirections;
	add sanity checks on the public entry points; make all the public
	properties floating point (where needed) andconvert them to fixed
	point internally. (Partial fix for #389)

2007-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour.[ch]: Rename ClutterBehaviour::apply
	and ClutterBehaviour::remove to ClutterBehaviour::applied and
	ClutterBehaviour::removed respectively, and emit them when the
	behaviour has been applied (or does no longer apply) to an actor.

	(clutter_behaviour_dispose), (clutter_behaviour_finalize),
	(clutter_behaviour_class_init): Move the actor removal to the
	::dispose virtual function, and remove the ::finalize one;
	document the missing properties and signals.

	(clutter_behaviour_clear): Add function to clear a behaviour:
	every actor will be unreffed and the ClutterBehaviour::removed
	signal will be emitted.

2007-07-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-event.c:
	Correct  clutter_event_get_state () return type. Fixes #398

	* clutter/glx/clutter-stage-glx.c:
	Disable use XFixes cursor visibility funcs. Appears to have issues
	on feisty X Server at least. Fallback should work generally better.
	